examples/kubernetes/manifests/pyrra-kubernetesDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: kubernetes
    app.kubernetes.io/name: pyrra
    app.kubernetes.io/version: 0.7.5
  name: pyrra-kubernetes
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: kubernetes
      app.kubernetes.io/name: pyrra
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: kubernetes
        app.kubernetes.io/name: pyrra
        app.kubernetes.io/version: 0.7.5
    spec:
      containers:
      - args:
        - kubernetes
        image: ghcr.io/pyrra-dev/pyrra:v0.7.5
        name: pyrra
        ports:
        - containerPort: 9099
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: pyrra-kubernetes
