examples/kubernetes/manifests/pyrra-kubernetesService.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: kubernetes
    app.kubernetes.io/name: pyrra
    app.kubernetes.io/version: 0.7.0-rc.1
  name: pyrra-kubernetes
  namespace: monitoring
spec:
  ports:
  - name: metrics
    port: 8080
    targetPort: 8080
  - name: http
    port: 9444
    targetPort: 9444
  - name: webhooks
    port: 9443
    targetPort: 9443
  selector:
    app.kubernetes.io/component: kubernetes
    app.kubernetes.io/name: pyrra
